--- a/game-warrior-gh-pages/game-warrior-gh-pages/HappyNewYear.html
+++ b/game-warrior-gh-pages/game-warrior-gh-pages/HappyNewYear.html
@@ -2,10 +2,32 @@
 <html lang="en">
 <head>
 	<link rel="stylesheet" href="css/HappyNewYear.css"/>
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" >
 
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js" ></script>
+
+<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
+
+<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-cookie/1.4.1/jquery.cookie.js" ></script>
+
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" >
+
+
+    
 </head>
 <body>
-	
+	<div id="myModal" class="modal fade" role="dialog">
+  <div class="modal-dialog">
+    <div class="modal-content">
+      <div class="modal-body">
+        <h2>Welcome To Elevenstech Web Tutorial</h2>
+      </div>
+      <div class="modal-footer">
+        <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+      </div>
+    </div>
+  </div>
+</div>
     
     <div id="new-year"><svg id="new-year-svg" version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" viewBox="0 0 500 400" style="width: 100%; height: 700px;"  >
 	<defs>
@@ -37,9 +59,10 @@
 
     </div>
 <div class="wrap">
-  <button class="button" id="showMe">Go to main page</button>
+  <button class="button" id="showMe" onclick="location.href='index.html';" value="Go to Main Page">Go to main page</button>
 
 
 </div>
+
     </body>
 </html>
